--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -7,6 +7,14 @@ body {
 .container {
     width: 1140px;
     margin: 0 auto;
+
+    @include tablet {
+        width: 96%;
+    }
+
+    @include mobile {
+        width: 96%;
+    }
 }
 
 .visually-hidden {
