--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,3 +12,8 @@ $input-color: #A4A4A4;
 $somewhat-grey: #B1B1B1;
 $greyish: #E1E1E1;
 $overlay-color: #3A3838DB;
+$dark-grey2: #6F6E6E;
+
+$desktop-width: 1600px;
+$tablet-width: 768px;
+$phone-width: 375px;
