--- a/scss/blocks/_features.scss
+++ b/scss/blocks/_features.scss
@@ -1,6 +1,10 @@
 .features__section {
     background-color: $black;
     margin: 96px 0 0;
+
+    @include tablet {
+        margin: 65px 0 0;
+    }
 }
 
 .features__list {
@@ -8,6 +12,18 @@
     justify-content: center;
     align-items: flex-end;
     height: 341px;
+
+    @include tablet {
+        flex-direction: column;
+        align-items: center;
+        height: 610px;
+    }
+
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+        height: 610px;
+    }
 }
 
 .features__item {
@@ -15,6 +31,10 @@
     flex-direction: column;
     align-items: center;
     margin: 0 0 104px;
+
+    @include tablet {
+        margin: 0 0 48px;
+    }
 }
 
 .features__item-heading {
@@ -28,4 +48,5 @@
     @include font(14px, 17px, 300);
     color: $whitish;
     text-align: center;
+    width: 360px;
 }
