--- a/scss/blocks/_promo.scss
+++ b/scss/blocks/_promo.scss
@@ -1,28 +1,67 @@
 .promo {
     display: flex;
     margin: 0 0 65px;
-    background-color: $promo-back-color;
+
+    @include tablet {
+        margin: 0 0 20px;
+    }
+
+    @include mobile {
+        margin: 0 0 64px;
+    }
 }
 
 .promo__heading-wrapper {
-
-    display: flex;
+    padding: 0 0 0 92px;
+    background-color: $promo-back-color;
     flex-grow: 1;
     align-items: center;
-    padding: 0 0 0 92px;
+    display: flex;
+
+    @include tablet {
+        padding: 0 0 0 68px;
+    }
+
+    @include mobile {
+        justify-content: center;
+        min-height: 363px;
+    }
 }
 
 .promo__heading {
     @include font(48px, 58px, 900);
     text-transform: uppercase;
+
+    @include tablet {
+        @include font(44px, 52px, 900);
+    }
+
+    @include mobile {
+        @include font(38px, 46px, 900);
+    }
 }
 
 .promo__sub-heading {
-    display: block;
-    @include font(37px, 44px, 700);
+    @include font(32px, 38px, 700);
+
+    @include tablet {
+        @include font(24px, 28px, 700);
+    }
+
+    @include mobile {
+        @include font(20px, 24px, 700);
+    }
 }
 
 .promo__sub-heading-pink {
     color: $dark-pink;
 }
 
+.promo__img {
+    width: 50%;
+    height: auto;
+
+    @include mobile {
+        display: none;
+    }
+}
