--- a/scss/blocks/_upper-footer.scss
+++ b/scss/blocks/_upper-footer.scss
@@ -1,12 +1,24 @@
 .upper-footer {
     height: 448px;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.9),  rgba(255, 255, 255, 1)), url(../img/footer_background.jpg);
-    background-repeat: no-repeat;
+    background-size: cover;
+
+    @include tablet {
+        height: 693px;
+    }
+
+    @include mobile {
+        height: 550px;
+    }
 }
 
 .upper-footer__wrapper {
     display: flex;
     justify-content: space-between;
+
+    @include tablet {
+        flex-direction: column;
+    }
 }
 
 .upper-left-footer, .upper-right-footer {
@@ -15,6 +27,10 @@
 
 .upper-left-footer__image {
     margin: 87px 0 40px;
+
+    @include tablet {
+        margin: 54px 0 40px;
+    }
 }
 
 .upper-left-footer__text {
@@ -31,10 +47,18 @@
     @include font(24px, 40px, 700);
     text-transform: uppercase;
     margin: 150px 0 0;
+
+    @include tablet {
+        margin: 78px 0 0;
+    }
+
+    @include mobile {
+        margin: 59px 0 0;
+    }
 }
 
 .upper-right-footer__sub-heading {
-    @include font(24px, 24px);
+    @include font(18px, 24px);
     text-transform: uppercase;
     margin-bottom: 32px;
 }
