--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,41 @@ table {
   border-spacing: 0;
 }
 
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato-regular-webfont.woff") format("woff"), url("../fonts/lato-regular-webfont.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato-italic-webfont.woff") format("woff"), url("../fonts/lato-italic-webfont.woff2") format("woff2");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato-light-webfont.woff") format("woff"), url("../fonts/lato-light-webfont.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato-bold-webfont.woff") format("woff"), url("../fonts/lato-bold-webfont.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato-black-webfont.woff") format("woff"), url("../fonts/lato-black-webfont.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+}
+
 body {
   font-family: 'Lato';
   font-style: normal;
@@ -84,6 +119,14 @@ body {
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
+.size-20 {
+  font-size: 20px;
 }
 
 .header {
