--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -1,4 +1,4 @@
-.browse-all-products__button {
+.featured-items__browse-all-products-button {
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
@@ -6,6 +6,7 @@
     color: $browse-pink;
     border: 1px solid $browse-pink;
     background: none;
+    transition: background-color 0.5s, color 0.5s;
 
     &:hover {
         background-color: $darker-pink;
@@ -13,7 +14,7 @@
     }
 }
 
-.browse-all-products__wrapper {
+.featured-items__browse-all-products {
     text-align: center;
 }
 
