--- a/scss/blocks/_cart.scss
+++ b/scss/blocks/_cart.scss
@@ -60,6 +60,7 @@
         background-color: transparent;
         @include font(14px, 17px, 300);
         text-transform: uppercase;
+        transition: background-color 0.5s;
 
         &:hover {
             background-color: $greyish;
@@ -118,6 +119,7 @@
         border: 1px solid #A4A4A4;
         background-color: transparent;
         @include font(14px, 17px, 300);
+        transition: background-color 0.5s;
 
         &:hover {
             background-color: $greyish;
@@ -183,6 +185,7 @@
     text-transform: uppercase;
     width: 100%;
     margin-bottom: 42px;
+    transition: background-color 0.5s;
 
     &:hover {
         background-color: $darker-pink;
