--- a/scss/blocks/_lower-footer.scss
+++ b/scss/blocks/_lower-footer.scss
@@ -26,6 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 0.5s;
 
     &:hover {
         background-color: $dark-pink;
